--- a/Draw/Controller/Common/CommonDialog.xib
+++ b/Draw/Controller/Common/CommonDialog.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1296</int>
+		<int key="IBDocument.SystemTarget">1280</int>
 		<string key="IBDocument.SystemVersion">11D50d</string>
 		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
 		<string key="IBDocument.AppKitVersion">1138.32</string>
@@ -13,6 +13,7 @@
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBUITextView</string>
 			<string>IBUIButton</string>
+			<string>IBUIImageView</string>
 			<string>IBUIView</string>
 			<string>IBUILabel</string>
 			<string>IBProxyObject</string>
@@ -42,6 +43,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrameSize">{320, 480}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="398737041"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -55,12 +57,43 @@
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
 						<array class="NSMutableArray" key="NSSubviews">
+							<object class="IBUIImageView" id="635258141">
+								<reference key="NSNextResponder" ref="398737041"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrameSize">{304, 257}</string>
+								<reference key="NSSuperview" ref="398737041"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="136130484"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">logout.png</string>
+								</object>
+							</object>
+							<object class="IBUIImageView" id="1056444846">
+								<reference key="NSNextResponder" ref="398737041"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{32, 73}, {240, 98}}</string>
+								<reference key="NSSuperview" ref="398737041"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="562454266"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">white_paper.png</string>
+								</object>
+							</object>
 							<object class="IBUILabel" id="136130484">
 								<reference key="NSNextResponder" ref="398737041"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{62, 10}, {153, 21}}</string>
+								<string key="NSFrame">{{76, 20}, {153, 21}}</string>
 								<reference key="NSSuperview" ref="398737041"/>
-								<reference key="NSNextKeyView" ref="562454266"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="1056444846"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -89,15 +122,15 @@
 							<object class="IBUIButton" id="489598899">
 								<reference key="NSNextResponder" ref="398737041"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 105}, {72, 37}}</string>
+								<string key="NSFrame">{{24, 200}, {99, 37}}</string>
 								<reference key="NSSuperview" ref="398737041"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="31053656"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
-								<int key="IBUIButtonType">1</int>
 								<string key="IBUINormalTitle">BACK</string>
 								<object class="NSColor" key="IBUIHighlightedTitleColor" id="51701944">
 									<int key="NSColorSpace">3</int>
@@ -110,6 +143,10 @@
 								<object class="NSColor" key="IBUINormalTitleShadowColor" id="117959064">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MC41AA</bytes>
+								</object>
+								<object class="NSCustomResource" key="IBUINormalBackgroundImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">red_button.png</string>
 								</object>
 								<object class="IBUIFontDescription" key="IBUIFontDescription" id="63278127">
 									<int key="type">2</int>
@@ -124,14 +161,15 @@
 							<object class="IBUIButton" id="31053656">
 								<reference key="NSNextResponder" ref="398737041"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{184, 105}, {72, 37}}</string>
+								<string key="NSFrame">{{185, 200}, {99, 37}}</string>
 								<reference key="NSSuperview" ref="398737041"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
-								<int key="IBUIButtonType">1</int>
 								<string key="IBUINormalTitle">OK</string>
 								<reference key="IBUIHighlightedTitleColor" ref="51701944"/>
 								<object class="NSColor" key="IBUINormalTitleColor">
@@ -139,24 +177,30 @@
 									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 								</object>
 								<reference key="IBUINormalTitleShadowColor" ref="117959064"/>
+								<object class="NSCustomResource" key="IBUINormalBackgroundImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">green_button.png</string>
+								</object>
 								<reference key="IBUIFontDescription" ref="63278127"/>
 								<reference key="IBUIFont" ref="463299706"/>
 							</object>
 							<object class="IBUITextView" id="562454266">
 								<reference key="NSNextResponder" ref="398737041"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 32}, {236, 65}}</string>
+								<string key="NSFrame">{{36, 95}, {236, 65}}</string>
 								<reference key="NSSuperview" ref="398737041"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="489598899"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<object class="NSColor" key="IBUIBackgroundColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MSAxIDEAA</bytes>
+								<object class="NSColor" key="IBUIBackgroundColor" id="303835429">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MCAwAA</bytes>
 								</object>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIMultipleTouchEnabled">YES</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText">content text</string>
+								<int key="IBUITextAlignment">1</int>
 								<object class="IBUITextInputTraits" key="IBUITextInputTraits">
 									<int key="IBUIAutocapitalizationType">2</int>
 									<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -172,27 +216,20 @@
 								</object>
 							</object>
 						</array>
-						<string key="NSFrame">{{22, 149}, {276, 162}}</string>
+						<string key="NSFrame">{{8, 101.5}, {304, 257}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSNextKeyView" ref="136130484"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="635258141"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<object class="NSColor" key="IBUIBackgroundColor">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MQA</bytes>
-							<object class="NSColorSpace" key="NSCustomColorSpace">
-								<int key="NSID">2</int>
-							</object>
-						</object>
+						<reference key="IBUIBackgroundColor" ref="303835429"/>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 460}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="971006306"/>
-				<object class="NSColor" key="IBUIBackgroundColor">
-					<int key="NSColorSpace">3</int>
-					<bytes key="NSWhite">MCAwAA</bytes>
-				</object>
+				<reference key="IBUIBackgroundColor" ref="303835429"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 		</array>
@@ -279,10 +316,12 @@
 						<int key="objectID">4</int>
 						<reference key="object" ref="398737041"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="136130484"/>
+							<reference ref="635258141"/>
 							<reference ref="489598899"/>
+							<reference ref="1056444846"/>
 							<reference ref="31053656"/>
 							<reference ref="562454266"/>
+							<reference ref="136130484"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
 					</object>
@@ -306,6 +345,16 @@
 						<reference key="object" ref="562454266"/>
 						<reference key="parent" ref="398737041"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">20</int>
+						<reference key="object" ref="635258141"/>
+						<reference key="parent" ref="398737041"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">21</int>
+						<reference key="object" ref="1056444846"/>
+						<reference key="parent" ref="398737041"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -316,6 +365,8 @@
 				<string key="1.CustomClassName">CommonDialog</string>
 				<string key="1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="20.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="21.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -326,17 +377,49 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">19</int>
+			<int key="maxID">21</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">CommonDialog</string>
+					<string key="superclassName">UIView</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="backButton">UIButton</string>
+						<string key="contentView">UIView</string>
+						<string key="oKButton">UIButton</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="backButton">
+							<string key="name">backButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="contentView">
+							<string key="name">contentView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="oKButton">
+							<string key="name">oKButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/CommonDialog.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
-		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
-			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1296" key="NS.object.0"/>
-		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
+		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="green_button.png">{16, 16}</string>
+			<string key="logout.png">{16, 16}</string>
+			<string key="red_button.png">{16, 16}</string>
+			<string key="white_paper.png">{16, 16}</string>
+		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">1179</string>
 	</data>
 </archive>
